; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_sanitize_refname_component.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_sanitize_refname_component.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@REFNAME_ALLOW_ONELEVEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"sanitizing refname '%s' check returned error\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sanitize_refname_component(i8* %0, %struct.strbuf* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.strbuf*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.strbuf* %1, %struct.strbuf** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = load i32, i32* @REFNAME_ALLOW_ONELEVEL, align 4
  %7 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %8 = call i64 @check_or_sanitize_refname(i8* %5, i32 %6, %struct.strbuf* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @BUG(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i8* %11)
  br label %13

13:                                               ; preds = %10, %2
  ret void
}

declare dso_local i64 @check_or_sanitize_refname(i8*, i32, %struct.strbuf*) #1

declare dso_local i32 @BUG(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
